Páginas geradas traduzidas, e algumas mudanças no html das páginas

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Blog 4soft</h1>
-<p>Aplicacação criada para aprendizagem de ruby on rails</p>
+<h2>Aplicacação criada para aprendizagem de ruby on rails</h2>
+
+<p>Para acessar o blog: <%= link_to "Blog 4soft", posts_path %></p>
