--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,7 @@
 <body>
 
 	<div id="topo">
-		<h1>Blog</h1>
-	</div>
-
-	<div id="navegacao">
-		<!--colocar link para logout -->
-		<p>Sair</p>
+		<h1>Blog 4soft</h1>
 	</div>
 
 	<div id="avisos">
