--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
 
 <table>
   <tr>
-    <th>Nome</th>
+    <th>Autor</th>
     <th>Título</th>
     <th>Conteúdo</th>
     <th></th>
@@ -12,7 +12,7 @@
 
 <% @posts.each do |post| %>
   <tr>
-    <td><%= post.name %></td>
+    <td><%= "gsfdngojfd" %></td>
     <td><%= post.title %></td>
     <td><%= post.content %></td>
     <td><%= link_to 'Exibir detalhes', post %></td>
