Algumas alterações no css, e usuário loga com seu nome agora

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,6 +8,19 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require_self
  *= require_tree .
+ *= require_self
 */
+
+table th{
+	border: 1px solid black;
+	text-align: left;
+	padding: 3px;
+}
+
+table td{
+	border: 1px solid black;
+	text-align: left;
+	padding: 3px;
+}
+
