--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,22 +1,26 @@
-<h2>Registro</h2>
+<div class="row">
+  <div class="span12"> 
+    <h2>Registro</h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+    <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
 
-  <div><%= f.label :name, "Digite seu nome" %><br />
-  <%= f.text_field :name %></div>
+      <div><%= f.label :name, "Digite seu nome" %><br />
+      <%= f.text_field :name %></div>
 
-  <div><%= f.label :email, "Digite seu email" %><br />
-  <%= f.email_field :email %></div>
+      <div><%= f.label :email, "Digite seu email" %><br />
+      <%= f.email_field :email %></div>
 
-  <div><%= f.label :password, "Digite sua senha" %><br />
-  <%= f.password_field :password %></div>
+      <div><%= f.label :password, "Digite sua senha" %><br />
+      <%= f.password_field :password %></div>
 
-  <div><%= f.label :password_confirmation, "Digite sua senha novamente"%><br />
-  <%= f.password_field :password_confirmation %></div>
+      <div><%= f.label :password_confirmation, "Digite sua senha novamente"%><br />
+      <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.submit "Confirmar registro" %></div>
-  <br />
-<% end %>
+      <div><%= f.submit "Confirmar registro" %></div>
+      <br />
+    <% end %>
 
-<%= render "devise/shared/links" %>
+    <%= render "devise/shared/links" %>
+  </div>
+</div>
