--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,69 @@
  *= require_tree .
  *= require_self
 */
+html, body{
+	background: #CC7722;
+	color: white;
+}
+
+.container{
+	background: #2F4F4F;
+	padding-left: 5px;
+}
+
+header .container{
+	border-bottom: 3px solid white;
+	margin-bottom: 10px;
+}
+
+a{
+	color: white !important;
+	text-decoration: underline;
+}
+
+a:hover{
+	color: white;
+	background: none;
+	text-decoration: none;	
+}
+
+header h1{
+	line-height: 3em;
+	text-shadow: black 0.1em 0.1em 0.2em;
+}
+
+header ul{
+	list-style: none;
+}
+
+header ul li{
+	display: inline-block;
+	line-height: 3em;
+}
+
+header ul li a{
+	padding: 0 15px 0 15px;
+	font-size: 1.3em;
+	display: block;
+	text-decoration: none;
+}
+
+header ul li a:hover{
+	background: #e86b31;
+}
+
+footer{
+	text-align: center;
+}
+
+footer .container{
+	border-top: 3px solid white;
+	margin-top: 10px;
+}
+
+footer p{
+	line-height: 25px;
+}
 
 table th{
 	border: 1px solid black;
