--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <h2>Aplicacação criada para aprendizagem de ruby on rails</h2>
-<p>Para acessar o blog: <%= link_to "Blog 4soft", posts_path %></p>
+<p>Para acessar o blog clique em <%= link_to "Blog do barulho", posts_path %></p>
 
 
 
